--- a/SingtoSleep/Base.lproj/Main.storyboard
+++ b/SingtoSleep/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pz5-8z-H6d">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pz5-8z-H6d">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="136"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9HQ-qb-GMz" id="vyu-E4-u6O">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="135.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SVE-yR-XPn">
@@ -43,43 +42,17 @@
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emH-DW-McM">
-                                            <rect key="frame" x="136" y="53" width="46" height="30"/>
-                                            <state key="normal" title="Dislike">
-                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="dislikeButtonPressed:" destination="9HQ-qb-GMz" eventType="touchUpInside" id="dfJ-d1-D2V"/>
-                                            </connections>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9F-Gc-L7G">
-                                            <rect key="frame" x="250" y="53" width="46" height="30"/>
-                                            <state key="normal" title="Like">
-                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="likeButtonPressed:" destination="9HQ-qb-GMz" eventType="touchUpInside" id="wv5-79-d5C"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="SVE-yR-XPn" firstAttribute="top" secondItem="vyu-E4-u6O" secondAttribute="top" constant="8" id="6P7-VJ-zbO"/>
                                         <constraint firstItem="SVE-yR-XPn" firstAttribute="leading" secondItem="vyu-E4-u6O" secondAttribute="leading" constant="8" id="8vG-A0-H28"/>
                                         <constraint firstItem="gUE-fj-8Px" firstAttribute="leading" secondItem="SVE-yR-XPn" secondAttribute="trailing" constant="8" id="EDl-aS-gfh"/>
-                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="leading" secondItem="emH-DW-McM" secondAttribute="trailing" constant="68" id="ERv-1n-Ahz"/>
-                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="top" secondItem="gUE-fj-8Px" secondAttribute="bottom" constant="24" id="GR3-eK-ic1"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="f9F-Gc-L7G" secondAttribute="trailing" constant="71" id="P43-r1-p7j"/>
-                                        <constraint firstItem="f9F-Gc-L7G" firstAttribute="leading" secondItem="emH-DW-McM" secondAttribute="trailing" constant="68" id="UWg-Ly-Ujt"/>
                                         <constraint firstAttribute="trailing" secondItem="gUE-fj-8Px" secondAttribute="trailing" constant="8" id="WaT-d7-9T9"/>
                                         <constraint firstItem="gUE-fj-8Px" firstAttribute="top" secondItem="vyu-E4-u6O" secondAttribute="top" constant="8" id="Zwe-6B-mdH"/>
-                                        <constraint firstItem="emH-DW-McM" firstAttribute="top" secondItem="gUE-fj-8Px" secondAttribute="bottom" constant="24" id="dwq-Ya-0DH"/>
-                                        <constraint firstItem="emH-DW-McM" firstAttribute="leading" secondItem="SVE-yR-XPn" secondAttribute="trailing" constant="8" id="sa4-yS-xwk"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <outlet property="dislikeButton" destination="emH-DW-McM" id="zr0-hL-Utf"/>
-                                    <outlet property="likeButton" destination="f9F-Gc-L7G" id="0x8-QN-mq7"/>
                                     <outlet property="songImageView" destination="SVE-yR-XPn" id="HgU-BS-AfE"/>
                                     <outlet property="songTitleLabel" destination="gUE-fj-8Px" id="drk-mz-BcF"/>
                                 </connections>
@@ -93,11 +66,40 @@
                     <navigationItem key="navigationItem" title="Songs" id="wTi-EL-RU2"/>
                     <connections>
                         <segue destination="vmV-cE-98o" kind="show" identifier="showPlayer" id="6z0-Aw-G4Y"/>
+                        <segue destination="mtB-oS-cdn" kind="presentation" identifier="showRatingTable" id="SA4-aN-WwN"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4w8-31-SnF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="913" y="431"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="Oln-QY-zpQ">
+            <objects>
+                <tableViewController id="mtB-oS-cdn" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="CR3-XM-2n7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="iDA-w6-UZt">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iDA-w6-UZt" id="Mw3-ty-T7x">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mtB-oS-cdn" id="3FX-g3-Ka9"/>
+                            <outlet property="delegate" destination="mtB-oS-cdn" id="yEb-wQ-m6v"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Wn-IM-bP9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="913" y="1198"/>
         </scene>
         <!--Player View Controller-->
         <scene sceneID="hq1-vZ-1pw">
